# Music-Service

./: .gitignore  Dockerfile  app.py  deploy.yml  docker-compose.yml  logging.ini  main.py  pyproject.toml  readme.md  sample.env  settings.py
.github/workflows/: check.yml  deploy.yml
app/: settings.py
app/routes/: __init__.py  concerts.py
app/services/yandex_music_service/: yandex_music_service.py
docs/: openapi.json
model/: __init__.py  artist.py  concert.py  price.py  track_list.py  tracks_list.py
response/: __init__.py  concerts_response.py  response_code.py  response_status.py  track_list_response.py
services/: __init__.py  yandex_music_service.py
tests/: utils.py
tests/v1/: test_yandex_music_service.py
