[tool.poetry]
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.9.4"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}
pydantic-settings = "^2.2.1"
types-redis = "^4.6.0.20240409"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
